Show horizontal scroller only in posts (Fixes #13)

--- a/css/index.css
+++ b/css/index.css
@@ -9530,7 +9530,7 @@ dl.stats.half_content {
   margin: 6px 0 6px;
 }
 .post > .inner {
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .signature, .attachments {
